--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- icon -->
-    <link rel="icon" href="/blog-preview-card-main/assets/images/favicon-32x32.png">
+    <link rel="icon" href="/images/favicon-32x32.png">
 
     <!-- css link -->
     <link rel="stylesheet" href="css/style.css">
@@ -17,14 +17,14 @@
     <section id="card">
         <div class="container">
             <div class="card rounded-4 border-dark" style="width: 24rem; height: 34rem;">
-                <img src="/blog-preview-card-main/assets/images/illustration-article.svg" class="card-img-top p-3" alt="...">
+                <img src="/images/illustration-article.svg" class="card-img-top p-3" alt="...">
                 <div class="card-body">
                   <a href="#" class="btn fw-bold">Learning</a>
                   <p class="pt-2">Published 31 Dec 2023 </p>
                   <h4 class="fw-bold title">HTML & CSS foundations</h4>
                   <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, dolore. Earum voluptates perferendis culpa nihil.</p>
                   <div class="author">
-                    <img class="avatar" src="/blog-preview-card-main/assets/images/image-avatar.webp" alt="avatar">
+                    <img class="avatar" src="/images/image-avatar.webp" alt="avatar">
                     <p class="fw-bold">Greg Hooper</p>
                   </div>
                 </div>
